<resources>

    <string name="app_name">Football Match Schedule</string>
    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="scoreTeam">- Vs -</string>
    <string name="matchDate">1-1-2018</string>
    <string name="emptyString">-</string>
    <string name="team">Team</string>
    <string name="favorites">Favorites</string>
    <string name="match">Matches</string>
    <string name="add_to_favorite">Add to Favorite</string>

</resources>
