<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tvMatchScheduleDate"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="match date"
                android:layout_margin = "12dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_below="@id/tvMatchScheduleDate">

            <LinearLayout android:layout_width="124dp" android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvHomeTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="12dp"
                        android:text="@string/homeTeam"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                />
            </LinearLayout>



            <TextView
                    android:id="@+id/tvScoreOfTheMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scoreTeam"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:maxLines="2"
                    android:layout_weight="100"
                    android:textAlignment="center"
            />

            <LinearLayout android:layout_width="124dp" android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvAwayTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:text="@string/awayTeam"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAlignment="textStart"
                />
            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>